@@ -13,7 +13,6 @@
 
 package pt.up.fe.specs.util.enums;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -47,8 +46,8 @@ public class EnumHelperWithValue<T extends Enum<T> & StringProvider> extends Enu
         Map<String, T> translationMap = SpecsEnums.buildMap(enumClass);
 
         excludeList.stream()
-                .map(exclude -> exclude.getString())
-                .forEach(key -> translationMap.remove(key));
+                .map(StringProvider::getString)
+                .forEach(translationMap::remove);
 
         return translationMap;
     }
@@ -64,9 +63,7 @@ public class EnumHelperWithValue<T extends Enum<T> & StringProvider> extends Enu
 
     /**
      * Helper method which converts the index of an enum to the enum.
-     * 
-     * @param index
-     * @return
+     *
      */
     public T fromValue(int index) {
         T[] array = values();
@@ -85,17 +82,15 @@ public class EnumHelperWithValue<T extends Enum<T> & StringProvider> extends Enu
 
     public List<T> fromValue(List<String> names) {
         return names.stream()
-                .map(name -> fromValue(name))
+                .map(this::fromValue)
                 .collect(Collectors.toList());
     }
 
     /**
-     * 
-     * @return
+     *
      */
     public String getAvailableValues() {
-        return translationMap.get().keySet().stream()
-                .collect(Collectors.joining(", "));
+        return String.join(", ", translationMap.get().keySet());
     }
 
     public EnumHelperWithValue<T> addAlias(String alias, T anEnum) {
@@ -117,7 +112,7 @@ public class EnumHelperWithValue<T extends Enum<T> & StringProvider> extends Enu
         if (anEnum == null) {
             throw new NullPointerException("Enum class cannot be null");
         }
-        return newLazyHelperWithValue(anEnum, Arrays.asList(exclude));
+        return newLazyHelperWithValue(anEnum, List.of(exclude));
     }
 
     public static <T extends Enum<T> & StringProvider> Lazy<EnumHelperWithValue<T>> newLazyHelperWithValue(
