@@ -18,6 +18,7 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -40,14 +41,15 @@ import pt.up.fe.specs.util.SpecsLogs;
 /**
  * A key-value store for arbitrary objects, with type-safe keys.
  *
- * <p>Implements {@link DataClass} for DataStore-specific operations.
+ * <p>
+ * Implements {@link DataClass} for DataStore-specific operations.
  */
 public interface DataStore extends DataClass<DataStore> {
 
     /**
      * Sets the value for the given key.
      *
-     * @param key the key
+     * @param key   the key
      * @param value the value to set
      * @return this DataStore
      */
@@ -57,7 +59,7 @@ public interface DataStore extends DataClass<DataStore> {
     /**
      * Helper method for setting a value, returns this DataStore.
      *
-     * @param key the key
+     * @param key   the key
      * @param value the value to set
      * @return this DataStore
      */
@@ -69,7 +71,7 @@ public interface DataStore extends DataClass<DataStore> {
     /**
      * Only sets the value if there is not a value yet for the given key.
      *
-     * @param key the key
+     * @param key   the key
      * @param value the value to set if not present
      */
     default <T, E extends T> void setIfNotPresent(DataKey<T> key, E value) {
@@ -82,7 +84,7 @@ public interface DataStore extends DataClass<DataStore> {
     /**
      * Sets a value for a key by its string id.
      *
-     * @param key the key id
+     * @param key   the key id
      * @param value the value
      * @return an Optional containing the previous value, if any
      */
@@ -91,7 +93,7 @@ public interface DataStore extends DataClass<DataStore> {
     /**
      * Sets a value for a DataKey when the type is unknown.
      *
-     * @param key the DataKey
+     * @param key   the DataKey
      * @param value the value
      * @return this DataStore
      */
@@ -107,12 +109,12 @@ public interface DataStore extends DataClass<DataStore> {
     /**
      * Sets a value for a DataKey using its decoder to decode a string.
      *
-     * @param key the DataKey
+     * @param key   the DataKey
      * @param value the string value to decode and set
      * @return this DataStore
      */
     default <T> DataStore setString(DataKey<T> key, String value) {
-        if (!key.getDecoder().isPresent()) {
+        if (key.getDecoder().isEmpty()) {
             throw new RuntimeException("No decoder set for key '" + key + "'");
         }
         return set(key, key.getDecoder().get().decode(value));
@@ -142,7 +144,8 @@ public interface DataStore extends DataClass<DataStore> {
     /**
      * Configures the current DataStore to behave strictly.
      *
-     * <p>Strict mode means that only keys that have been added before can be accessed.
+     * <p>
+     * Strict mode means that only keys that have been added before can be accessed.
      *
      * @param value true to enable strict mode, false to disable
      */
@@ -151,7 +154,9 @@ public interface DataStore extends DataClass<DataStore> {
     /**
      * Sets a StoreDefinition for this DataStore.
      *
-     * <p>Can only set a StoreDefinition once, subsequent calls to this function will throw an exception.
+     * <p>
+     * Can only set a StoreDefinition once, subsequent calls to this function will
+     * throw an exception.
      *
      * @param definition the StoreDefinition to set
      */
@@ -169,14 +174,15 @@ public interface DataStore extends DataClass<DataStore> {
     /**
      * Adds a new key and value to the DataStore.
      *
-     * <p>Throws an exception if there already is a value for the given key.
+     * <p>
+     * Throws an exception if there already is a value for the given key.
      *
-     * @param key the key
+     * @param key   the key
      * @param value the value to add
      * @return this DataStore
      */
     default <T, E extends T> DataStore add(DataKey<T> key, E value) {
-        Preconditions.checkArgument(key != null);
+        Objects.requireNonNull(key);
         SpecsCheck.checkArgument(!hasValue(key), () -> "Attempting to add value already in PassData: " + key);
         set(key, value);
         return this;
@@ -223,13 +229,14 @@ public interface DataStore extends DataClass<DataStore> {
     /**
      * Replaces the value of an existing key.
      *
-     * <p>Throws an exception if there is no value for the given key.
+     * <p>
+     * Throws an exception if there is no value for the given key.
      *
-     * @param key the key
+     * @param key   the key
      * @param value the new value to set
      */
     default <T, E extends T> void replace(DataKey<T> key, E value) {
-        Preconditions.checkArgument(key != null);
+        Objects.requireNonNull(key);
         Preconditions.checkArgument(hasValue(key), "Attempting to replace value for key not yet in PassData: " + key);
         set(key, value);
     }
@@ -249,7 +256,9 @@ public interface DataStore extends DataClass<DataStore> {
     /**
      * Returns the value associated with the given key.
      *
-     * <p>If there is no value for the key, returns the default value defined by the key.
+     * <p>
+     * If there is no value for the key, returns the default value defined by the
+     * key.
      *
      * @param key the key
      * @return the value associated with the key
@@ -269,7 +278,8 @@ public interface DataStore extends DataClass<DataStore> {
      * Checks if the DataStore contains a non-null value for the given key.
      *
      * @param key the key
-     * @return true if the DataStore contains a non-null value for the key, false otherwise
+     * @return true if the DataStore contains a non-null value for the key, false
+     *         otherwise
      */
     @Override
     <T> boolean hasValue(DataKey<T> key);
@@ -277,8 +287,9 @@ public interface DataStore extends DataClass<DataStore> {
     /**
      * Tries to return a value from the DataStore.
      *
-     * <p>Does not use default values. If the key is not in the map, or there is no value mapped to the given key,
-     * returns an empty Optional.
+     * <p>
+     * Does not use default values. If the key is not in the map, or there is no
+     * value mapped to the given key, returns an empty Optional.
      *
      * @param key the key
      * @return an Optional containing the value, if present
@@ -308,12 +319,14 @@ public interface DataStore extends DataClass<DataStore> {
     /**
      * Creates a copy of this DataStore.
      *
-     * <p>If the DataStore has a StoreDefinition, uses the copy function defined in the DataKeys.
+     * <p>
+     * If the DataStore has a StoreDefinition, uses the copy function defined in the
+     * DataKeys.
      *
      * @return a copy of this DataStore
      */
     default DataStore copy() {
-        if (!getStoreDefinitionTry().isPresent()) {
+        if (getStoreDefinitionTry().isEmpty()) {
             throw new RuntimeException("No StoreDefinition defined, cannot copy. DataStore: " + this);
         }
 
@@ -353,10 +366,12 @@ public interface DataStore extends DataClass<DataStore> {
     }
 
     /**
-     * Creates a new DataStore instance with the given StoreDefinition and closed state.
+     * Creates a new DataStore instance with the given StoreDefinition and closed
+     * state.
      *
      * @param storeDefinition the StoreDefinition
-     * @param closed if true, no other keys besides the ones defined in the StoreDefinition can be added
+     * @param closed          if true, no other keys besides the ones defined in the
+     *                        StoreDefinition can be added
      * @return a new DataStore instance
      */
     public static DataStore newInstance(StoreDefinition storeDefinition, boolean closed) {
@@ -391,9 +406,10 @@ public interface DataStore extends DataClass<DataStore> {
     }
 
     /**
-     * Creates a new DataStore instance with the given name and values from another DataStore.
+     * Creates a new DataStore instance with the given name and values from another
+     * DataStore.
      *
-     * @param name the name of the DataStore
+     * @param name      the name of the DataStore
      * @param dataStore the DataStore to copy values from
      * @return a new DataStore instance
      */
@@ -402,7 +418,8 @@ public interface DataStore extends DataClass<DataStore> {
     }
 
     /**
-     * Creates a DataStore from all the public static DataKeys that can be found in the class.
+     * Creates a DataStore from all the public static DataKeys that can be found in
+     * the class.
      *
      * @param aClass the class to derive the DataStore from
      * @return a new DataStore instance
@@ -417,9 +434,9 @@ public interface DataStore extends DataClass<DataStore> {
 
         if (getStoreDefinitionTry().isPresent()) {
             keys = getStoreDefinitionTry().get().getKeys().stream()
-                    .filter(key -> hasValue(key))
-                    .map(key -> key.getName())
-                    .collect(Collectors.toList());
+                    .filter(this::hasValue)
+                    .map(DataKey::getName)
+                    .toList();
         }
 
         return keys.stream()
@@ -444,7 +461,8 @@ public interface DataStore extends DataClass<DataStore> {
     }
 
     /**
-     * Returns the AppPersistence instance that was used to load this DataStore, if any.
+     * Returns the AppPersistence instance that was used to load this DataStore, if
+     * any.
      *
      * @return an Optional containing the AppPersistence instance, if present
      */
